<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.search.SearchFragment">

        <TextView
            android:id="@+id/text_presentation_recherche"
            android:text="@string/presentation_research"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/text_recherche"
            android:text="@string/enter_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/edit_text_recherche"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="numberSigned"
            android:hint="@string/example_number"
            android:textSize="20dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/text_recherche_date"
            android:text="@string/enter_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/edit_text_recherche_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="date"
            android:hint="@string/example_date"
            android:textSize="20dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/text_recherche_year"
            android:text="@string/enter_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/edit_text_recherche_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="numberSigned"
            android:hint="@string/example_year"
            android:textSize="20dp"
            android:textColor="@color/black"
            />
        <Button
            android:id="@+id/button_recherche"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_search"
            android:layout_marginHorizontal="50dp"
        />

        <TextView
            android:id="@+id/text_result_recherche"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:background="@drawable/border_result"
            android:layout_marginBottom="120dp"
            android:layout_margin="20dp"
            android:padding="10dp"
            />


    </LinearLayout>
</ScrollView>